<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <ImageView
        android:id="@+id/thumbnail_imageView"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/image_description"
        android:scaleType="centerCrop"
        tools:src="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/thumbnail_imageView"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/Maroon"
        tools:text="@string/holder_title" />

    <TextView
        android:textColor="@color/DarkSlateGray"
        android:id="@+id/section_textView"
        style="@style/customised_textViews"
        android:layout_below="@id/title_textView"
        android:layout_toEndOf="@id/thumbnail_imageView"
        tools:text="@string/holder_section" />

    <TextView
        android:textColor="@color/Olive"
        android:id="@+id/time_textView"
        style="@style/customised_textViews"
        android:layout_below="@id/title_textView"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="7dp"
        tools:text="@string/holder_time" />

    <TextView
        android:textColor="@color/Olive"
        android:id="@+id/date_textView"
        style="@style/customised_textViews"
        android:layout_below="@id/title_textView"
        android:layout_toStartOf="@id/time_textView"
        tools:text="@string/holder_date" />

    <TextView
        android:textColor="@color/RosyBrown"
        android:id="@+id/authors_textView"
        style="@style/customised_textViews"
        android:layout_below="@id/time_textView"
        android:layout_alignParentEnd="true"
        tools:text="@string/holder_author" />
</RelativeLayout>